<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>de.dfki.mlt</groupId>
  <artifactId>vonda</artifactId>
  <version>1.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <properties>
    <encoding>UTF-8</encoding>

    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <repositories>
    <repository>
      <id>project_local</id>
      <name>project_local</name>
      <url>file://${project.basedir}/repo</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>net.sf.jopt-simple</groupId>
      <artifactId>jopt-simple</artifactId>
      <version>5.0.2</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>

    <!--
    <dependency>
      <groupId>de.dfki.tecs</groupId>
      <artifactId>libtecs</artifactId>
      <version>2.0.6</version>
    </dependency>
    -->

    <dependency>
      <groupId>org.apache.thrift</groupId>
      <artifactId>libthrift</artifactId>
      <version>0.16.0</version>
    </dependency>

    <dependency>
      <groupId>de.dfki.lt.hfc</groupId>
      <artifactId>hfc-thrift</artifactId>
      <version>0.1-SNAPSHOT</version>
      <type>jar</type>
    </dependency>

    <dependency>
      <groupId>com.ibm.icu</groupId>
      <artifactId>icu4j</artifactId>
      <version>55.1</version>
    </dependency>

    <dependency>
      <groupId>de.dfki.mlt</groupId>
      <artifactId>cplan-ccg</artifactId>
      <version>1.1-SNAPSHOT</version>
      <type>jar</type>
    </dependency>

    <dependency>
      <groupId>de.dfki.mlt</groupId>
      <artifactId>cplan-core</artifactId>
      <version>1.1-SNAPSHOT</version>
      <type>jar</type>
    </dependency>

    <dependency>
      <groupId>de.dfki.mlt</groupId>
      <artifactId>dataviz</artifactId>
      <version>0.1-SNAPSHOT</version>
    </dependency>

    <dependency>
      <groupId>org.yaml</groupId>
      <artifactId>snakeyaml</artifactId>
      <version>1.30</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.36</version>
      <type>jar</type>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>1.7.36</version>
      <type>jar</type>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>net.sf.trove4j</groupId>
      <artifactId>trove4j</artifactId>
      <version>3.0.3</version>
      <type>jar</type>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>0.8.5</version>
          <executions>
              <execution>
                  <goals>
                      <goal>prepare-agent</goal>
                  </goals>
              </execution>
              <execution>
                  <id>report</id>
                  <phase>prepare-package</phase>
                  <goals>
                      <goal>report</goal>
                  </goals>
              </execution>
          </executions>
      </plugin>

      <!--<plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.5.3</version>
        <executions>
          <execution>
            <id>fat-jar</id> - this is used for inheritance merges -
            <phase>package</phase> - bind to the packaging phase -
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <finalName>vonda-compiler-${project.version}</finalName>
              <attach>false</attach>
              <appendAssemblyId>false</appendAssemblyId>
              <archive>
                <manifest>
                  <mainClass>de.dfki.mlt.rudimant.compiler.CompilerMain</mainClass>
                </manifest>
              </archive>
              <descriptors>
                <descriptor>src/assembly/fatjar.xml</descriptor>
              </descriptors>
              -<descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
              </descriptorRefs>-
            </configuration>
          </execution>
          <execution>
            <id>src-dist-archive</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <descriptors>
                <descriptor>src/assembly/src.xml</descriptor>
              </descriptors>
            </configuration>
          </execution>
        </executions>
        </plugin>-->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <artifactSet>
                <excludes>
                  <exclude>junit:junit</exclude>
                  <exclude>de.dfki.mlt:vonda-runtime</exclude>
                </excludes>
              </artifactSet>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>de.dfki.mlt.rudimant.compiler.CompilerMain</mainClass>
                </transformer>
              </transformers>
              <shadedArtifactAttached>true</shadedArtifactAttached>
              <shadedClassifierName>compiler</shadedClassifierName>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
        <executions>
          <execution>
            <id>runtime</id>
            <phase>package</phase>
            <goals>
              <goal>jar</goal>
            </goals>
            <configuration>
              <classifier>runtime</classifier>
              <includes>
                <include>**/agent/**/*</include>
                <include>**/common/*</include>
              </includes>
            </configuration>
          </execution>
          <execution>
            <phase>package</phase>
            <id>compiling</id>
            <goals>
              <goal>jar</goal>
            </goals>
            <configuration>
              <classifier>compiling</classifier>
              <includes>
                <include>**/compiler/**/*</include>
                <include>**/common/*</include>
              </includes>
            </configuration>
          </execution>
        </executions>
        <!-- put the default-jar in the none phase to skip it from being created
        <executions>
          <execution>
            <id>default-jar</id>
                 <phase>none</phase>
          </execution>
        </executions>
        -->
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>1.1</version>
        <executions>
          <execution>
            <id>makebisonflex</id>
            <phase>generate-sources</phase>
            <goals><goal>exec</goal></goals>
            <configuration>
              <workingDirectory>${project.build.sourceDirectory}/de/dfki/mlt/rudimant/compiler/io</workingDirectory>
              <executable>make</executable>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.2</version>
        <configuration>
          <systemPropertyVariables>
            <log4j.configurationFile>${project.build.testSourceDirectory}/../resources/log4j2.xml</log4j.configurationFile>
          </systemPropertyVariables>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <version>2.4.1</version>
        <configuration>
          <filesets>
            <fileset>
              <directory>src/main/resources/generated</directory>
              <includes>
                <include>**/*</include>
              </includes>
              <followSymlinks>false</followSymlinks>
            </fileset>
            <fileset>
              <directory>src/test/resources/miniproj/src/main/generated</directory>
              <includes>
                <include>**/*</include>
              </includes>
              <followSymlinks>false</followSymlinks>
            </fileset>
            <fileset>
              <directory>src/test/resources/miniproj/target</directory>
              <includes>
                <include>**/*</include>
              </includes>
              <followSymlinks>false</followSymlinks>
            </fileset>
          </filesets>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
